fix(report): fix layout issues with loaded gegevens
Fixed layout bugs causing details to load incorrectly.
Improved the overall layout appearance within the report.

--- a/packages/wcagify/app/assets/css/main.css
+++ b/packages/wcagify/app/assets/css/main.css
@@ -7,8 +7,29 @@ a:not([class]) {
   text-decoration: underline;
 }
 
-.prose a {
-  text-decoration: underline;
+.prose {
+  a {
+    text-decoration: none;
+  }
+
+  :is(h1, h2, h3, h4, h5, h6) {
+    text-decoration: none;
+    margin-top: 0;
+    margin-bottom: 0.25rem;
+
+    a {
+      pointer-events: none;
+      cursor: text;
+
+      > span {
+        display: none;
+      }
+    }
+  }
+
+  p {
+    margin-top: 0;
+  }
 }
 
 :focus-visible {
